# Computer-Network

./: CMakeLists.txt  README.md
Assignment-1/: tcp_client.c  tcp_server.c  udp_client.c  udp_server.c
Assignment-2/: Switch.docx
Assignment-3/: assignment3.pkt
Assignment-4/: Assignmen-4.pkt
Assignment2/: assignment2.pkt
